CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(UncertainScalarFields)

#SET(CMAKE_BUILD_TYPE Debug)
SET (CMAKE_CXX_STANDARD 11)
SET(CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../Paraview5_2bin)

IF(NOT MASTER_BUILD)
  IF (ParaView_SOURCE_DIR)
    INCLUDE_DIRECTORIES(
      ${VTK_INCLUDE_DIRS}
    )
  ELSE (ParaView_SOURCE_DIR)
    FIND_PACKAGE(ParaView REQUIRED)
    INCLUDE(${PARAVIEW_USE_FILE})
  ENDIF (ParaView_SOURCE_DIR)
ENDIF(NOT MASTER_BUILD)

ADD_PARAVIEW_PLUGIN(UncertainScalarFields "0.1"
  SERVER_MANAGER_XML
        UncertainScalarFields_Server.xml
  SERVER_MANAGER_SOURCES
        UncertainScalarFields.cxx
)
