cmake_minimum_required(VERSION 2.8)
project(UncertainRidges)

set(CMAKE_CXX_STANDARD 14)
#set(CMAKE_BUILD_TYPE RELEASE)
set(CMAKE_CXX_FLAGS "-march=native")
set(CMAKE_BUILD_TYPE RELEASE)
set(CMAKE_CXX_FLAGS "-Wno-narrowing")
#set(CMAKE_CXX_FLAGS "-ggdb3")
set(CMAKE_CXX_FLAGS "-DNDEBUG")
set(CMAKE_CXX_FLAGS "-O3")
set(EIGEN3_INCLUDE_DIR "{CMAKE_CURRENT_SOURCE_DIR}/Eigen")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../Paraview/libs/linalg)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../Paraview/libs/3Party/build)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../Paraview/libs/3Party/eigen3.3.4/Eigen)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../Paraview/libs/3Party/catch)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../../Paraview/libs/3Party/EigenInitList)
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../Paraview/Paraview5_2bin)
find_package(OpenMP)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

SET(MASTER_BUILD FALSE)
IF(NOT MASTER_BUILD)
    IF (ParaView_SOURCE_DIR)
        INCLUDE_DIRECTORIES(
                ${VTK_INCLUDE_DIRS}
        )
    ELSE (ParaView_SOURCE_DIR)
        FIND_PACKAGE(ParaView REQUIRED)
        INCLUDE(${PARAVIEW_USE_FILE})
    ENDIF (ParaView_SOURCE_DIR)
ENDIF(NOT MASTER_BUILD)

ADD_PARAVIEW_PLUGIN(UncertainRidges "1.0"
        SERVER_MANAGER_XML
        UncertainRidges_Server.xml
        SERVER_MANAGER_SOURCES
        UncertainRidges.cpp
        SOURCES ${SOURCE_FILES})
